fai (2.9) unstable; urgency=low

  * splitting binary package fai into fai-server, fai-client, fai-doc 

 -- Thomas Lange <lange@debian.org>  Sat,  8 Oct 2005 21:28:29 +0200

fai (2.8.4) unstable; urgency=high

  * fix important bug: remove non-US entry (closes: #310392)
  * package_config: remove nonfree package t1-xfree86-nonfree from
    examples (closes: #310705)

 -- Thomas Lange <lange@debian.org>  Wed, 25 May 2005 13:59:39 +0200

fai (2.8.3) unstable; urgency=high

  * fix a serious bug, remove debconf support (closes: #309209), debconf
    support may be included again after sarge
  * fix important bug, do not delete files in /etc/fai (closes: #309707)
  * control: remove dependency on debconf
  * postinst, postrm: remove debconf code
  * rules: do not call dh_installdebconf
  * remove debian/config, debian/template
  * remove files in debian/po: POTFILES.in de.po fr.po templates.pot
  * fai.conf: set placeholder for installserver, since debconf will not
    set it any more
  * conf/make-fai-nfsroot.conf, conf/sources.list: use ftp.debian.org
    instead of debconf's default values
  * man/fai-chboot.8: minor document patch (closes: #309138, 309142)
  * fai-guide.sgml: minor document patch, move section "For the impatient
    user" to the front (closes: #309134, #309556) 
  * README.build-sources: add memo to use -ICVS in the future

 -- Thomas Lange <lange@debian.org>  Thu, 19 May 2005 15:54:18 +0200

fai (2.8.2) unstable; urgency=high

  * remove old unused scripts from cvs source
  * updatebase: use mktemp for creating temp file, this closes a serious
    security bug (closes: #307838)
  * fai: create dir only during initial installation, fixes a critical bug
    (closes: #307632)
  * subroutines-linux: do not "mount --bind" when FAI_ROOT=/, closes
    important bug (closes: #307631)

 -- Thomas Lange <lange@debian.org>  Fri,  6 May 2005 09:23:34 +0200

fai (2.8.1) unstable; urgency=low
