@@ -34,3 +34,10 @@ Description: Fully Automatic Installation client package
  configured, and running on the whole cluster, without any interaction
  necessary.  Homepage: http://www.informatik.uni-koeln.de/fai
  This package contains the software needed on the install client.
+
+Package: fai-nfsroot
+Architecture: all
+Depends: fai-client
+Description: Fully Automatic Installation nfsroot package
+ FAI is a tool for doing Fully Automatic Installation of Debian(-based) Linux
+ systems. This package contains the software that is only needed in the FAI nfsroot.
