@@ -1,0 +1,13 @@
+usr/sbin/faireboot
+usr/sbin/fai-start-stop-daemon
+usr/sbin/dhclient-script
+usr/lib/fai/create_ramdisk
+usr/lib/fai/create_resolv_conf
+usr/lib/fai/load_keymap_consolechars
+usr/lib/fai/fai-divert
+usr/lib/fai/fai-mount-disk
+usr/lib/fai/mount2dir
+usr/lib/fai/task_sysinfo
+etc/fai/apt.conf
+etc/fai/dhclient.conf
+etc/modutils/fai_modules_off
