@@ -1,8 +1,9 @@
 fai (2.9) unstable; urgency=low
 
-  * splitting binary package fai into fai-server, fai-client, fai-doc 
+  * splitting binary package fai into fai-server, fai-client, fai-doc,
+    fai-nfsroot
 
- -- Thomas Lange <lange@debian.org>  Sat,  8 Oct 2005 21:28:29 +0200
+ -- Thomas Lange <lange@debian.org>  Sun,  9 Oct 2005 13:50:42 +0200
 
 fai (2.8.4) unstable; urgency=high
 
